updated automount and ip_spi_report.service for more reliable results

--- a/scripts/ip_spi_report.service
+++ b/scripts/ip_spi_report.service
@@ -1,10 +1,12 @@
 [Unit]
 Description=Report IP Address to FPGA once booted
-After=network.target develop.mount
+After=network.target develop.mount raspi-config.service
 
 [Service]
-Type=oneshot
+Type=idle
 ExecStart=python3 /develop/rpi_start.py
+RestartSec=5
+Restart=on-failure
 
 [Install]
 WantedBy=multi-user.target
