--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "c:\\Users\\devin\\Workspaces\\pi_scripts\\.venv\\Scripts\\python.exe"
+    "python.defaultInterpreterPath": "c:\\Users\\devin\\Workspaces\\pi_scripts\\.venv\\Scripts\\python.exe"
 }
